--- a/index.html
+++ b/index.html
@@ -293,25 +293,25 @@
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="https://videolucy.github.io" target="_blank">Jialong Zuo</a><sup>1</sup>,</span>
+                <a href="https://scholar.google.com/citations?user=R5OWszMAAAAJ&hl=zh-CN&oi=ao" target="_blank">Jialong Zuo</a><sup>1</sup>,</span>
                 <span class="author-block">
                   <a href="https://videolucy.github.io" target="_blank">Yongtai Deng</a><sup>1</sup>,</span>
                   <span class="author-block">
-                    <a href="https://videolucy.github.io" target="_blank">Lingdong Kong</a><sup>2</sup>,</span>
+                    <a href="https://ldkong.com/" target="_blank">Lingdong Kong</a><sup>2</sup>,</span>
                     <span class="author-block">
-                      <a href="https://videolucy.github.io" target="_blank">Jingkang Yang</a><sup>3</sup>,</span>
+                      <a href="https://jingkangyang.com/" target="_blank">Jingkang Yang</a><sup>3</sup>,</span>
                       <span class="author-block">
                         <a href="https://videolucy.github.io" target="_blank">Rui Jin</a><sup>1</sup>,</span>
                         <span class="author-block">
                           <a href="https://videolucy.github.io" target="_blank">Yiwei Zhang</a><sup>1</sup>,</span>
                           <span class="author-block">
-                            <a href="https://videolucy.github.io" target="_blank">Nong Sang</a><sup>1</sup>,</span>
+                            <a href="https://scholar.google.com/citations?user=ky_ZowEAAAAJ&hl=zh-CN" target="_blank">Nong Sang</a><sup>1</sup>,</span>
                             <span class="author-block">
-                              <a href="https://videolucy.github.io" target="_blank">Liang Pan</a><sup>4</sup>,</span>
+                              <a href="https://scholar.google.com/citations?user=lSDISOcAAAAJ&hl=zh-CN" target="_blank">Liang Pan</a><sup>4</sup>,</span>
                               <span class="author-block">
-                                <a href="https://videolucy.github.io" target="_blank">Ziwei Liu</a><sup>3*</sup>,</span>
+                                <a href="https://liuziwei7.github.io/" target="_blank">Ziwei Liu</a><sup>3*</sup>,</span>
                                 <span class="author-block">
-                                  <a href="https://videolucy.github.io" target="_blank">Changxin Gao</a><sup>1*</sup>,</span>
+                                  <a href="https://scholar.google.com/citations?user=4tku-lwAAAAJ&hl=zh-CN&oi=ao" target="_blank">Changxin Gao</a><sup>1*</sup>,</span>
 
                   </span>
                   </div>
