--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                           <span class="author-block">
                             <a href="https://scholar.google.com/citations?user=ky_ZowEAAAAJ&hl=zh-CN" target="_blank">Nong Sang</a><sup>1</sup>,</span>
                             <span class="author-block">
-                              <a href="https://scholar.google.com/citations?user=lSDISOcAAAAJ&hl=zh-CN" target="_blank">Liang Pan*</a><sup>4</sup>,</span>
+                              <a href="https://scholar.google.com/citations?user=lSDISOcAAAAJ&hl=zh-CN" target="_blank">Liang Pan</a><sup>4*</sup>,</span>
                               <span class="author-block">
                                 <a href="https://liuziwei7.github.io/" target="_blank">Ziwei Liu</a><sup>3</sup>,</span>
                                 <span class="author-block">
