--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <div class="publication-links">
                          <!-- TODO: Update with your arXiv paper ID -->
                       <span class="link-block">
-                        <a href="https://videolucy.github.io" target="_blank"
+                        <a href="https://neurips.cc/virtual/2025/poster/117816" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -348,7 +348,7 @@
                 </span>
                 <!-- Dataset Link. -->
                   <span class="link-block">
-                    <a href="https://videolucy.github.io"
+                    <a href="https://huggingface.co/datasets/jlongzuo/EgoMem"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                           <i class="far fa-images"></i>
@@ -358,7 +358,7 @@
                     </span>
                 <!-- TODO: Update with your arXiv paper ID -->
                 <span class="link-block">
-                  <a href="https://videolucy.github.io" target="_blank"
+                  <a href="https://arxiv.org/abs/2510.12422" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
