--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
                   <!-- TODO: Replace with your GitHub repository URL -->
                   <span class="link-block">
-                    <a href="https://videolucy.github.io" target="_blank"
+                    <a href="https://github.com/Zplusdragon/VideoLucy" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
